[gd_scene load_steps=8 format=3 uid="uid://m464vxcaotgk"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_thpc2"]
[ext_resource type="PackedScene" uid="uid://ctdv2crkbkbej" path="res://scenes/ui/health_bar.tscn" id="2_63lbg"]
[ext_resource type="Texture2D" uid="uid://3gxpa6sq825o" path="res://assets/ui/bar_background.png" id="3_3f8np"]
[ext_resource type="Texture2D" uid="uid://js122kmw6x38" path="res://assets/ui/life_heart.png" id="3_b71ig"]
[ext_resource type="FontFile" uid="uid://dc41dta6b8aeg" path="res://resources/pixel_font.ttf" id="4_hiqvd"]
[ext_resource type="Texture2D" uid="uid://jqql7hgmwfj5" path="res://assets/ui/bar.png" id="4_hr34k"]
[ext_resource type="Texture2D" uid="uid://cgq5n8s1kgmxu" path="res://assets/ui/logo.png" id="5_v5bwj"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_thpc2")
metadata/_edit_vertical_guides_ = [475.0]

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.266667, 0.266667, 0.266667, 1)
polygon = PackedVector2Array(25, 25, 25, 425, 350, 425, 350, 25, 64, 25, 64, 0, 600, 0, 600, 450, 0, 450, 0, 0, 64, 0, 64, 25)

[node name="HealthBar" parent="." instance=ExtResource("2_63lbg")]
offset_left = 35.0
offset_top = 32.0
offset_right = 163.0
offset_bottom = 48.0
texture_under = ExtResource("3_3f8np")
texture_progress = ExtResource("4_hr34k")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(449, 62)
texture = ExtResource("3_b71ig")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(467, 62)
texture = ExtResource("3_b71ig")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(485, 62)
texture = ExtResource("3_b71ig")

[node name="Health" type="Label" parent="."]
offset_left = 369.0
offset_top = 55.0
offset_right = 439.0
offset_bottom = 81.0
theme_override_fonts/font = ExtResource("4_hiqvd")
text = "HEALTH:"

[node name="Message" type="Label" parent="."]
offset_left = 136.0
offset_top = 208.0
offset_right = 249.0
offset_bottom = 231.0
theme_override_fonts/font = ExtResource("4_hiqvd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 160.0
offset_top = 192.0
offset_right = 213.0
offset_bottom = 258.0

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(475, 370)
texture = ExtResource("5_v5bwj")

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
